Re-Fix background imahge not showing in every sub-page due to incorrect push

--- a/recipes/honeygarlicporkchops.css
+++ b/recipes/honeygarlicporkchops.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    background-image: url(/images/background1.jpg);
+    background-image: url(../images/background1.jpg);
     font-size: 22px;
     overflow-x: hidden;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
